2001-12-07  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in: Increment VERSION.
	* include/w32api.h: Ditto.

2001-12-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/setupi.h (SetupDiCreateDeviceInterfaceRegKey[AW],
	SetupDiCreateDevRegKey[AW],SetupDiDeleteDeviceInterfaceRegKey,
	SetupDiDeleteDevRegKey,SetupDiOpenClassRegKey,
	SetupDiOpenClassRegKeyEx[AW],SetupDiOpenDeviceInterfaceRegKey,
	SetupDiOpenDevRegKey): Correct function names.

2001-12-04  Earnie Boyd  <earnie@users.sf.net>

	* include/winuser.h (IDC_STATIC): Don't define.

2001-12-04  Danny Smith  <dannysmith@users.sourceforge.net>

        Cleanup merge between SourceForge and winsup CVS.
        * include/winbase.h (OSVERSIONINFO[AW], OSVERSIONINFOEX[AW]: Remove 
	definitions.
        * include/winnt.h (VER_NT*): Remove duplicate defines.
        (VER_SUITE*): Group with VER_PLATFORM*, VER_NT* defines.

2001-12-03  Earnie Boyd  <earnie@users.sf.net>

	* include/accctrl.h: Change \r\n to \n.

2001-11-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ipexport.h (IP_UNIDIRECTIONAL_ADAPTER_ADDRESS):
	Add structure definition.
	* include/iptypes.h (IP_PER_ADAPTER_INFO): Ditto.
	* include/iphlpapi.h (AddIPAddress,CreateProxyArpEntry,
	DeleteIPAddress,DeleteProxyArpEntry,EnableRouter,
	FlushIpNetTable,GetAdapterIndex,GetPerAdapterInfo,
	GetUniDirectionalAdapterInfo,SendARP,SetAdapterIpAddress,
	UnenableRouter) Declare functions.
	* lib/iphlpapi.def: Add function names to import lib.

2001-11-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (PACCESS_MASK): Add typedef.
	* include/aclapi.h: New file.
	* include/acctrl.h: New file.
	* lib/advapi32.def: Add missing symbols.
	* lib/test.c: Add #include <aclapi.h>.

2001-11-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (OSVERSIONINFO[AW],VER_PLATFORM_WIN32s,
	VER_PLATFORM_WIN32_WINDOWS,VER_PLATFORM_WIN32_NT): Move from
	here ...
	* include/winnt.h: ... to here.